// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot edit mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {},
        Object {
          "dataSet": Object {},
        },
      ]
    }
    dataSet={Object {}}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "marginLeft": "auto",
            "marginRight": "auto",
            "maxWidth": 1180,
            "width": "100%",
          }
        }
      >
        <View>
          <Text>
            [{"form":{"id":"form-1","code":"","name":"form-name-1","databaseId":"database-id","folderId":"folder-id","formType":"default","fields":[{"id":"field-1","name":"field-name-1","description":"description-1","code":"","required":false,"key":false,"fieldType":{"text":{}}}]},"record":{"id":"record-1","values":[{"value":"value-field-1","fieldId":"field-1"}],"formId":"form-1","databaseId":"database-id"}},{"form":{"id":"form-2","code":"","name":"form-name-2","databaseId":"database-id","folderId":"folder-id","formType":"default","fields":[{"id":"field-2","name":"field-name-2","description":"description-2","code":"","required":false,"key":false,"fieldType":{"text":{}}}]},"record":{"id":"record-2","values":[{"value":"value-field-2","fieldId":"field-2"}],"formId":"form-2","databaseId":"database-id"}},{"form":{"id":"form-3","code":"","name":"form-name-3","databaseId":"database-id","folderId":"folder-id","formType":"default","fields":[{"id":"field-3","name":"field-name-3","description":"description-3","code":"","required":false,"key":false,"fieldType":{"text":{}}}]},"record":{"id":"record-3","values":[{"value":"value-field-3","fieldId":"field-3"}],"formId":"form-3","databaseId":"database-id"}}]
          </Text>
        </View>
        <View
          dataSet={Object {}}
          style={
            Object {
              "height": 16,
            }
          }
        />
        <View
          dataSet={Object {}}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            }
          }
        >
          <View
            _text={
              Object {
                "color": "lightText",
              }
            }
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            colorScheme="secondary"
            dataSet={Object {}}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onHoverIn={[Function]}
            onHoverOut={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#24303E",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "nrc_10",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": "nrc_10",
                "paddingRight": "nrc_10",
                "paddingTop": 8,
              }
            }
            testID="recipient-registration-cancel-button"
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                dataSet={Object {}}
                style={Object {}}
              >
                <Text
                  dataSet={Object {}}
                  level="1"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#24303E",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 20,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Cancel
                </Text>
              </View>
            </View>
          </View>
          <View
            dataSet={Object {}}
            style={
              Object {
                "width": 16,
              }
            }
          />
          <View
            _text={
              Object {
                "color": "lightText",
              }
            }
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            colorScheme="primary"
            dataSet={Object {}}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onHoverIn={[Function]}
            onHoverOut={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF7602",
                "borderRadius": 3,
                "flexDirection": "row",
                "height": "nrc_10",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": "nrc_10",
                "paddingRight": "nrc_10",
                "paddingTop": 8,
              }
            }
            testID="recipient-registration-submit-button"
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                dataSet={Object {}}
                style={Object {}}
              >
                <Text
                  dataSet={Object {}}
                  level="1"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#fff",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 20,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Review
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;

exports[`should match the snapshot error 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`should match the snapshot loading 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`should match the snapshot review mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {},
        Object {
          "dataSet": Object {},
        },
      ]
    }
    dataSet={Object {}}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "marginLeft": "auto",
            "marginRight": "auto",
            "maxWidth": 1180,
            "width": "100%",
          }
        }
      >
        <View>
          <Text>
            [{"form":{"id":"form-1","code":"","name":"form-name-1","databaseId":"database-id","folderId":"folder-id","formType":"default","fields":[{"id":"field-1","name":"field-name-1","description":"description-1","code":"","required":false,"key":false,"fieldType":{"text":{}}}]},"record":{"id":"record-1","values":[{"value":"value-field-1","fieldId":"field-1"}],"formId":"form-1","databaseId":"database-id"}},{"form":{"id":"form-2","code":"","name":"form-name-2","databaseId":"database-id","folderId":"folder-id","formType":"default","fields":[{"id":"field-2","name":"field-name-2","description":"description-2","code":"","required":false,"key":false,"fieldType":{"text":{}}}]},"record":{"id":"record-2","values":[{"value":"value-field-2","fieldId":"field-2"}],"formId":"form-2","databaseId":"database-id"}},{"form":{"id":"form-3","code":"","name":"form-name-3","databaseId":"database-id","folderId":"folder-id","formType":"default","fields":[{"id":"field-3","name":"field-name-3","description":"description-3","code":"","required":false,"key":false,"fieldType":{"text":{}}}]},"record":{"id":"record-3","values":[{"value":"value-field-3","fieldId":"field-3"}],"formId":"form-3","databaseId":"database-id"}}]
          </Text>
        </View>
        <View
          dataSet={Object {}}
          style={
            Object {
              "height": 16,
            }
          }
        />
        <View
          dataSet={Object {}}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            }
          }
        >
          <View
            _text={
              Object {
                "color": "lightText",
              }
            }
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            colorScheme="secondary"
            dataSet={Object {}}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onHoverIn={[Function]}
            onHoverOut={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#24303E",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "nrc_10",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": "nrc_10",
                "paddingRight": "nrc_10",
                "paddingTop": 8,
              }
            }
            testID="recipient-registration-cancel-button"
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                dataSet={Object {}}
                style={Object {}}
              >
                <Text
                  dataSet={Object {}}
                  level="1"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#24303E",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 20,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Back
                </Text>
              </View>
            </View>
          </View>
          <View
            dataSet={Object {}}
            style={
              Object {
                "width": 16,
              }
            }
          />
          <View
            _text={
              Object {
                "color": "lightText",
              }
            }
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            colorScheme="primary"
            dataSet={Object {}}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onHoverIn={[Function]}
            onHoverOut={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF7602",
                "borderRadius": 3,
                "flexDirection": "row",
                "height": "nrc_10",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": "nrc_10",
                "paddingRight": "nrc_10",
                "paddingTop": 8,
              }
            }
            testID="recipient-registration-submit-button"
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                dataSet={Object {}}
                style={Object {}}
              >
                <Text
                  dataSet={Object {}}
                  level="1"
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#fff",
                      "fontFamily": "Roboto_500Medium",
                      "fontSize": 20,
                      "fontStyle": undefined,
                      "fontWeight": undefined,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "auto",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Save
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;
